# picoruby

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Gemfile  Guardfile  LICENSE  Makefile  README.md  Rakefile  Steepfile  docker-compose.yml  mrblib  rbs_todo.md  test  test_picorbc
.bundle/: config
.codex/plans/: looper.md
.github/workflows/: c-cpp.yml  stale.yml
build_config/: arm-linux-gnueabihf.rb  default-retired-202409.rb  default.rb  femtoruby-filc.rb  femtoruby-test.rb  femtoruby.rb  microruby-32bit.rb  microruby-cortex-m33.rb  microruby-test.rb  microruby-wasm.rb  microruby.rb  mips-linux-gnu.rb  mrbc-wasm.rb  mrbc.rb  mrbc2.rb  mrbc_lrama.rb  mrbc_prism.rb  mrubyc-original-alloc.rb  mrubyc.rb  no-libc-host.rb  picorbc-wasm.rb  picorbc.rb  picoruby-32bit.rb  picoruby-filc.rb  picoruby-test.rb  picoruby-wasm-test.rb  picoruby-wasm.old.rb  picoruby-wasm.rb  picoruby.rb  picoruby2.rb  posix-net-test.rb  posix.rb  prk_firmware-cortex-m0plus.rb  prk_firmware-cortex-m33.rb  prk_firmware.rb  prsh-arm-bin.rb  prsh-bin.rb  prsh-cortex-m0plus.rb  prsh-lib_arm-none-eabi.rb  prsh.rb  (+34 more)
cli/: .gitignore  Makefile  heap.h  main.c  mmirb.c  mmrbc.c  mmruby.c  mrubyc.c  picoirb.c  picorbc.c  picoruby.c  picoshell.c  sandbox.c  sandbox.h
cli/mmirb_lib/: .ruby-version  Makefile  shell.h  shell.rb
cli/picoirb_lib/: .gitignore
cli/picoshell_lib/: .ruby-version  Makefile  shell.rb
cli/ruby/: buffer.c  buffer.rb  irb.c  irb.rb
docs/: RELEASE.md  socket-design-plan.md  testing-guide.md
docs/logos/: picoruby-ogp.xcf  picoruby.kicad_mod
examples/: hello.rb
include/: mruby.h  picoruby.h  version.h
include/hal_no_impl/: hal.c  hal.h
include/picoruby/: debug.h  float.h  string_utils.h
include/psoc5lp/: project.h
lib/mruby/: build.rb  gem.rb
lib/picoruby/: build.rb  gem.rb  runtime_gems.rb
mrbgems/: baremetal.gembox  core.gembox  cyw43.gembox  default-retired-202409.gembox  default.gembox  machine.gembox  minimum.gembox  mruby-compiler-prism  mruby-posix.gembox  networking.gembox  peripheral_utils.gembox  peripheral_utils_1.gembox  peripheral_utils_2.gembox  peripherals.gembox  picoruby.gembox  picoruby2.gembox  posix-microruby.gembox  posix.gembox  prk_firmware.gembox  r2p2.gembox  shell.gembox  stdlib-microruby.gembox  stdlib.gembox  utils.gembox
mrbgems/hal-picoruby-task/: mrbgem.rake
mrbgems/mruby-file-stat/: mrbgem.rake
mrbgems/picoruby-adafruit_pcf8523/: README.md  mrbgem.rake
mrbgems/picoruby-adafruit_sk6812/: README.md  mrbgem.rake
mrbgems/picoruby-adafruit_ws2812/: mrbgem.rake
mrbgems/picoruby-adc/: README.md  mrbgem.rake
mrbgems/picoruby-adns5050/: mrbgem.rake
mrbgems/picoruby-aht25/: README.md  mrbgem.rake
mrbgems/picoruby-akizukidenshi_aqm0802a/: mrbgem.rake
mrbgems/picoruby-aqm0802a/: mrbgem.rake
mrbgems/picoruby-base16/: README.md  mrbgem.rake
mrbgems/picoruby-base64/: README.md  mrbgem.rake
mrbgems/picoruby-base_encoding/: README.md  mrbgem.rake
mrbgems/picoruby-bdffont/: mrbgem.rake
mrbgems/picoruby-bin-microruby/: mrbgem.rake
mrbgems/picoruby-bin-picoirb/: mrbgem.rake
mrbgems/picoruby-bin-picoruby/: mrbgem.rake
mrbgems/picoruby-bin-picoruby2/: mrbgem.rake
mrbgems/picoruby-bin-prsh/: mrbgem.rake
mrbgems/picoruby-bin-r2p2/: mrbgem.rake
mrbgems/picoruby-bin-sqlite3-test/: mrbgem.rake
mrbgems/picoruby-ble/: README.md  mrbgem.rake
mrbgems/picoruby-ble-hid/: mrbgem.rake
mrbgems/picoruby-ble-uart/: mrbgem.rake
mrbgems/picoruby-buddie/: README.md  Rakefile  mrbgem.rake
mrbgems/picoruby-cbor/: README.md  mrbgem.rake
mrbgems/picoruby-coap/: README.md  mrbgem.rake
mrbgems/picoruby-crc/: README.md  mrbgem.rake
mrbgems/picoruby-cyw43/: README.md  mrbgem.rake
mrbgems/picoruby-data/: README.md  mrbgem.rake
mrbgems/picoruby-dfu/: README.md  mrbgem.rake
mrbgems/picoruby-dip_switch/: mrbgem.rake
mrbgems/picoruby-dir/: LICENSE.md  README.md  mrbgem.rake
mrbgems/picoruby-drb/: mrbgem.rake
mrbgems/picoruby-drb-websocket/: IMPLEMENTATION_STATUS.md  mrbgem.rake
mrbgems/picoruby-editor/: README.md  mrbgem.rake
mrbgems/picoruby-r2p2/cmake/: CMakeLists.txt  memmap_rp2350.ld  memmap_rp2350.ld.in  pico_sdk_import.cmake
mrbgems/picoruby-shinonome/lib/shinonome-0.9.11/: AUTHORS  BUGS  ChangeLog  ChangeLog.0  DESIGN.12  DESIGN.14  DESIGN.16  DESIGN.18  INSTALL  LICENSE  Makefile.in  README  THANKS  TODO  configure  configure.in  fonts.alias
mrbgems/picoruby-shinonome/lib/shinonome-0.9.11/autom4te.cache/: output.0  requests  traces.0
mrbgems/picoruby-shinonome/lib/shinonome-0.9.11/bdf/: shnm6x12a.bdf  shnm6x12ab.bdf  shnm6x12abi.bdf  shnm6x12ai.bdf  shnm6x12r.bdf  shnm6x12rb.bdf  shnm6x12rbi.bdf  shnm6x12ri.bdf  shnm7x14a.bdf  shnm7x14ab.bdf  shnm7x14abi.bdf  shnm7x14ai.bdf  shnm7x14r.bdf  shnm7x14rb.bdf  shnm7x14rbi.bdf  shnm7x14ri.bdf  shnm8x16a.bdf  shnm8x16ab.bdf  shnm8x16abi.bdf  shnm8x16ai.bdf  shnm8x16r.bdf  shnm8x16rb.bdf  shnm8x16rbi.bdf  shnm8x16ri.bdf  shnm9x18a.bdf  shnm9x18ab.bdf  shnm9x18abi.bdf  shnm9x18ai.bdf  shnm9x18r.bdf  shnm9x18rb.bdf  shnm9x18rbi.bdf  shnm9x18ri.bdf  shnmk12.bdf  shnmk12b.bdf  shnmk12bi.bdf  shnmk12i.bdf  shnmk12maru.bdf  shnmk12marub.bdf  shnmk12marubi.bdf  shnmk12marui.bdf  (+24 more)
src/: .gitignore  Makefile  common.c  common.h  compiler.c  compiler.h  debug.h  dump.c  dump.h  fmemstream.c  fmemstream.h  generator.c  generator.h  helper_gen.rb  mmrbc.h  my_regex.c  my_regex.h  node.c  node.h  picorbc.h  regex_light.c  regex_light.h  scope.c  scope.h  stream.c  stream.h  token.c  token.h  token_data.h  tokenizer.c  tokenizer.h  version.c  version.c.in  version.h
statistics/: .gitignore  memcheck.rb
tasks/: bin.rake  mrblib.rake  picogems.rake  r2p2.rake
test/: and_or_test.rb  assign_test.rb  block_test.rb  case_test.rb  class_test.rb  def_test.rb  dstr_test.rb  fixnum_test.rb  function_test.rb  gvar_test.rb  hash_test.rb  if_test.rb  in_test.rb  integer_test.rb  ivar_test.rb  method_test.rb  op_assign_test.rb  string_test.rb  yield_test.rb
tests/: test_invariant_pkey.c
tools/: generate_serial_transfer_samples.rb  r2p2_serial_run.rb  test_runner.rb
(+2054 files in other folders)
